fixed
made it so non-clickable project doesn't look like it can be clicked

--- a/css/text.css
+++ b/css/text.css
@@ -46,6 +46,15 @@
     transition: background-color 0.3s ease, color 0.3s ease;
     height: auto; /* Maintains aspect ratio */
     margin: 0 auto; /* Centers the project div */
+    transition: box-shadow 1s ease, border-color 0.3s ease;
+}
+.project:hover
+{
+    box-shadow: 0 0 15px 5px limegreen; /* Green glow effect */
+}
+.project.non-clickable:hover {
+    box-shadow: none; /* Remove the shadow effect on hover */
+    border-color: #008000; /* Keep border color unchanged to signify it's not interactive */
 }
 .project-text {
     flex: 1 1 60%; /* Adjusted to allow more space for video */
